deploy/firefly-kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chintan-namespace
---
apiVersion: v1
kind: Service
metadata:
  namespace: chintan-namespace
  labels:
    app: front
  name: front
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: front
---
apiVersion: v1
kind: Service
metadata:
  namespace: chintan-namespace
  labels:
    app: db
  name: db
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    app: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: chintan-namespace
  labels:
    app: front
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: chintan-namespace
      labels:
        app: front
    spec:
      containers:
        - envFrom:
          - configMapRef:
              name: env
          image: fireflyiii/core:latest
          name: app
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /var/www/html/storage/upload
              name: firefly-iii-upload
      restartPolicy: Always
      volumes:
        - name: firefly-iii-upload
          persistentVolumeClaim:
            claimName: firefly-iii-upload

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: chintan-namespace
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      namespace: chintan-namespace 
      labels:
        app: db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: firefly
            - name: MYSQL_PASSWORD
              value: secret_firefly_password
            - name: MYSQL_RANDOM_ROOT_PASSWORD
              value: "yes"
            - name: MYSQL_USER
              value: firefly
          image: mariadb
          name: db
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: firefly-iii-db
      restartPolicy: Always
      volumes:
        - name: firefly-iii-db
          persistentVolumeClaim:
            claimName: firefly-iii-db

---
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  namespace: chintan-namespace

  name: firefly-app

spec:

  ingressClassName: traefik

  rules:
  - host: "chintan.local"
    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: front

            port:

              number: 8080
